feat: add watchdogs for all models

--- a/carol-fi/Makefile
+++ b/carol-fi/Makefile
@@ -1,7 +1,11 @@
 run:
 	python watchdog.py
 
-# clean_logs:
-# 	rm -rf summary-carolfi.log logs
+sh:
+	python watchdog-selective-hardening.py
+
+fd:
+	python watchdog-duplication.py
+	
 stats:
 	./stats.sh
